--- a/index.html
+++ b/index.html
@@ -15,26 +15,14 @@
 </head>
 <body>
 	<!-- start header -->
-	<header>
-		<div class="container">
-			<nav>
-				<ul>
-					<li class="logo"><h1>`<a href="#">logo</a></h1></li>
-					<li> <a href="#">home</a></li>
-					<li><a href="#">about</a></li>
-					<li><a href="#">contact</a></li>
-					<li><a href="#">skills</a></li>
-				</ul>
-			</nav>
-		</div>
-	</header>
+	/
 	<!-- end header -->
-	<section class="intro">
+	<!-- <section class="intro">
 		<h2>welcome TO my website</h2>
-	</section>
+	</section> -->
 	<!-- end intro -->
 	<!-- article -->
-	<section class="intro2">
+	<!-- <section class="intro2">
 		<div class="container">
 			<article class="article1">
 				<p>
@@ -47,15 +35,78 @@
 				</p>
 			</article>
 			<div class="aside">
-				
-					<ul>
-						<li>fb</li>
-						<li>tw</li>
-						<li>in</li>
-					</ul>
-				
+				<ul>
+					<li>fb</li>
+					<li>tw</li>
+					<li>in</li>
+				</ul>
 			</div>
 		</div>
+	</section> -->
+	<section class="cards">
+		<div class="container"> 
+			<div class="card">
+				<div class="img-card">
+					<img src="img/011.jpg">
+				</div>
+				<div class="card-body">
+					<h5>mohamed shukry</h5>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco 
+					</p>
+				</div>
+			</div>
+			<div class="card">
+				<div class="img-card">
+					<img src="img/011.jpg">
+				</div>
+				<div class="card-body">
+					<h5>mohamed shukry</h5>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco 
+					</p>
+				</div>
+			</div>
+			<div class="card">
+				<div class="img-card">
+					<img src="img/011.jpg">
+				</div>
+				<div class="card-body">
+					<h5>mohamed shukry</h5>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco 
+					</p>
+				</div>
+			</div>
+		</div>
+	</section>
+	<div style="clear: both;"></div>
+	<hr>
+	<section class="card-v">
+		<div class="container">
+			<div class="card">
+				<div class="img-card">
+					<img src="img/011.jpg">
+				</div>
+				<div class="card-body">
+					<h5>mohamed shukry</h5>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco 
+					</p>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="bac">
+		
 	</section>
 	<!-- start footer -->
 	<footer>
