--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		<div class="container"> 
 			<div class="card">
 				<div class="img-card">
-					<img src="img/011.jpg">
+					<img src="img/011.jpg" style="opacity: .5">
 				</div>
 				<div class="card-body">
 					<h5>mohamed shukry</h5>
@@ -71,7 +71,7 @@
 					</p>
 				</div>
 			</div>
-			<div class="card">
+			<div class="card" >
 				<div class="img-card">
 					<img src="img/011.jpg">
 				</div>
@@ -87,6 +87,19 @@
 		</div>
 	</section>
 	<div style="clear: both;"></div>
+	<section class="demo">
+		<div class="container">
+			<button class="btn">hover me</button>
+			<p class="text-demo">
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			</p>
+		</div>
+	</section>
 	<hr>
 	<section class="card-v">
 		<div class="container">
@@ -105,9 +118,57 @@
 			</div>
 		</div>
 	</section>
+	<section class="test-float">
+		<div class="one">
+			1
+		</div>
+		<div class="two">
+			2
+		</div>
+		<div class="last">
+			3
+		</div>
+			<div style="clear: both;"></div>
+		<div>
+			66
+		</div>
+		<div>77</div>
+		<div>77</div>
+		<div>77</div>
+		<div>77</div>
+	</section>
+	<section class="test-postion">
+		<div class="postion-left">
+			left
+		</div>
+		<div class="postion-right">
+			right
+		</div>
+		<div class="postion-top">
+			top
+		</div>
+		<div class="postion-bottom">
+			bottom
+		</div>
+	</section>
+	<div class="div-text">
+		<p>
+			lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		</p>
+	</div>
 	<section class="bac">
 		
 	</section>
+	<div class="social">
+		<div class="fb">fb</div>
+		<div class="tw">tw</div>
+		<div class="in">in</div>
+	</div>
 	<!-- start footer -->
 	<footer>
 		<div class="container">
