--- a/index.html
+++ b/index.html
@@ -43,6 +43,30 @@
 			</div>
 		</div>
 	</section> -->
+	<table >
+	  <tr>
+	    <th>Firstname</th>
+	    <th>Lastname</th> 
+	    <th>Age</th>
+	  </tr>
+	  <tr>
+	    <td>Jill</td>
+	    <td>Smith</td>
+	    <td>50</td>
+	  </tr>
+	  <tr>
+	    <td>Eve</td>
+	    <td>Jackson</td>
+	    <td>94</td>
+	  </tr>
+	  <tr>
+	    <td>John</td>
+	    <td>Doe</td>
+	    <td>80</td>
+	  </tr>
+	</table>
+
+
 	<section class="cards">
 		<div class="container"> 
 			<div class="card">
