--- a/index.html
+++ b/index.html
@@ -1,203 +1,31 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<meta name="author" content="mohamed shukry">
-	<meta name="description" content="">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>sec4</title>
-	<!-- font -->
-	<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+	<head>
+		<meta charset="utf-8">
+		<meta name="author" content="mohamed shukry">
+		<meta name="description" content="">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>sec4</title>
+		<!-- font -->
+		<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 
-	<link rel="stylesheet" type="text/css" href="css/normalize.css">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-</head>
-<body>
-	<!-- start header -->
-	/
-	<!-- end header -->
-	<!-- <section class="intro">
-		<h2>welcome TO my website</h2>
-	</section> -->
-	<!-- end intro -->
-	<!-- article -->
-	<!-- <section class="intro2">
-		<div class="container">
-			<article class="article1">
-				<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-				</p>
-			</article>
-			<div class="aside">
-				<ul>
-					<li>fb</li>
-					<li>tw</li>
-					<li>in</li>
-				</ul>
-			</div>
-		</div>
-	</section> -->
-	<table >
-	  <tr>
-	    <th>Firstname</th>
-	    <th>Lastname</th> 
-	    <th>Age</th>
-	  </tr>
-	  <tr>
-	    <td>Jill</td>
-	    <td>Smith</td>
-	    <td>50</td>
-	  </tr>
-	  <tr>
-	    <td>Eve</td>
-	    <td>Jackson</td>
-	    <td>94</td>
-	  </tr>
-	  <tr>
-	    <td>John</td>
-	    <td>Doe</td>
-	    <td>80</td>
-	  </tr>
-	</table>
+		<link rel="stylesheet" type="text/css" href="css/normalize.css">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
+	</head>
+	<body>
 
-
-	<section class="cards">
-		<div class="container"> 
-			<div class="card">
-				<div class="img-card">
-					<img src="img/011.jpg" style="opacity: .5">
-				</div>
-				<div class="card-body">
-					<h5>mohamed shukry</h5>
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco 
-					</p>
+		<section class="intro">
+			<div class="container">
+				<div class="test-flex">
+					<div></div>
+					<div id="test" style="display: none;">hello</div>
+					<div id="demo"> welcome</div>
+					<button id="click1">click me</button>
 				</div>
 			</div>
-			<div class="card">
-				<div class="img-card">
-					<img src="img/011.jpg">
-				</div>
-				<div class="card-body">
-					<h5>mohamed shukry</h5>
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco 
-					</p>
-				</div>
-			</div>
-			<div class="card" >
-				<div class="img-card">
-					<img src="img/011.jpg">
-				</div>
-				<div class="card-body">
-					<h5>mohamed shukry</h5>
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco 
-					</p>
-				</div>
-			</div>
-		</div>
-	</section>
-	<div style="clear: both;"></div>
-	<section class="demo">
-		<div class="container">
-			<button class="btn">hover me</button>
-			<p class="text-demo">
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-			</p>
-		</div>
-	</section>
-	<hr>
-	<section class="card-v">
-		<div class="container">
-			<div class="card">
-				<div class="img-card">
-					<img src="img/011.jpg">
-				</div>
-				<div class="card-body">
-					<h5>mohamed shukry</h5>
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco 
-					</p>
-				</div>
-			</div>
-		</div>
-	</section>
-	<section class="test-float">
-		<div class="one">
-			1
-		</div>
-		<div class="two">
-			2
-		</div>
-		<div class="last">
-			3
-		</div>
-			<div style="clear: both;"></div>
-		<div>
-			66
-		</div>
-		<div>77</div>
-		<div>77</div>
-		<div>77</div>
-		<div>77</div>
-	</section>
-	<section class="test-postion">
-		<div class="postion-left">
-			left
-		</div>
-		<div class="postion-right">
-			right
-		</div>
-		<div class="postion-top">
-			top
-		</div>
-		<div class="postion-bottom">
-			bottom
-		</div>
-	</section>
-	<div class="div-text">
-		<p>
-			lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-		</p>
-	</div>
-	<section class="bac">
-		
-	</section>
-	<div class="social">
-		<div class="fb">fb</div>
-		<div class="tw">tw</div>
-		<div class="in">in</div>
-	</div>
-	<!-- start footer -->
-	<footer>
-		<div class="container">
-			<h6>Copyright 2017	© <span>odigita</span> Designed by mohamed Shukry</h6>
-		</div>
-	</footer>
-</body>
+		</section>
+		<script src="js/jquery-3.2.1.min.js"></script>
+		<script type="text/javascript" src="main.js"></script>
+	</body>
 </html>
